CONSUMER: Prototype unified manager poll output